* Mon Mar 02 2009 - Ding-Yi Chen <dchen at redhat.com> - 1.0.2.20090302-1
  Required gconf2 -> GConf2.
  Fix RPM scriptlet.

* Fri Feb 27 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.1.20090227-1
  Add gconf schema.
  Fix some memory leaking checked.
  Move some function to cmake_modules.
  Fix Google code issue 281
  
* Fri Feb 20 2009 - Ding-Yi Chen <dchen at redhat.com>  - 1.0.0.20090220-1
This is a barely working version for with IBus C.
The build system is converted from autotool to CMake.