@@ -34,3 +34,5 @@ stamp-h1
 py-compile
 ibus-chewing*.tar.*
 ibus-chewing.spec
+DEVELOPER_SETTING
+
