@@ -49,11 +49,11 @@ CONFIGURE_FILE(src/chewing.xml.in src/chewing.xml)
 # Required packages
 #
 FIND_PACKAGE(PkgConfig)
-PKG_CHECK_MODULES(GTK2 gtk+-2.0)
-PKG_CHECK_MODULES(IBUS ibus-1.0)
-PKG_CHECK_MODULES(GCONF2 gconf-2.0)
-PKG_CHECK_MODULES(X11 x11)
-PKG_CHECK_MODULES(XTST xtst)
+PKG_CHECK_MODULES(GTK2 REQUIRED gtk+-2.0)
+PKG_CHECK_MODULES(IBUS REQUIRED ibus-1.0)
+PKG_CHECK_MODULES(GCONF2 REQUIRED gconf-2.0)
+PKG_CHECK_MODULES(X11 REQUIRED x11)
+PKG_CHECK_MODULES(XTST REQUIRED xtst)
 FIND_PROGRAM(GOB2 gob2)
 
 IF(${GOB2} STREQUAL "GOB2-NOTFOUND")
