@@ -1,4 +1,10 @@
-* Mon Mar 02 2009 - Ding-Yi Chen <dchen at redhat.com> - 1.0.2.20090302-1
+* Wed Mar 11 2009 - Ding-Yi Chen <dchen at redhat.com> - 1.0.3.20090311-1
+  IBus Google issue 305:  ibus-chewing.schema -> ibus-chewing.schemas
+  IBus Google issue 307:  hardcoded chewing datadir
+  Sync chewing candPerPage and IBusTable->page_size
+  Sync between IM and keyboard (Experimental)
+ 
+* Tue Mar 03 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.2.20090303-1
   Required gconf2 -> GConf2.
   Fix RPM scriptlet.
 
